--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
 <p><strong>Science beyond science</strong></p>
 
-<div style="text-align: justify">  To me, Science does not end after publishing papers. In that sense, I enjoy a lot participating in projects that, while they are often based on my main areas of research, have very different outcomes. For instance, I am currently involved in the <a href="https://nightup.icfo.eu/"> Night up </a> project, aimed at the study of light pollution via a citizen science experiment. I was also very lucky to collaborate in the creation of quantum inspired music (soon to come)! Moreover, I have participated in plenty of outreach projects both for young students and the general public, check the Teaching tab above to know more!. </div>
+<div style="text-align: justify">  To me, Science does not end after publishing papers. In that sense, I enjoy a lot participating in projects that, while they are often based on my main areas of research, have very different outcomes. For instance, I am currently involved in the <a href="https://nightup.icfo.eu/"> Night up </a> project, aimed at the study of light pollution via a citizen science experiment. I was also very lucky to collaborate in the creation of quantum inspired music, which resulted in incredible performance by Reiko Yamada at the <a href="https://www.youtube.com/watch?v=Z-GLxgg0Z18"> Sonar Festival 2021! </a>  Moreover, I have participated in plenty of outreach projects both for young students and the general public, check the Teaching tab above to know more!. </div>
 
     </div>
 
