--- a/teaching/index.html
+++ b/teaching/index.html
@@ -157,7 +157,12 @@
   </header>
 
   <article>
-    <h3 id="characterization-of-ergodicity-breaking-and-anomalous-diffusion-from-single-trajectories">Characterization of Ergodicity Breaking and Anomalous Diffusion from Single Trajectories</h3>
+    <h3 id="summer-school-machine-learning-in-quantum-physics-and-chemistry">Summer School: Machine Learning in Quantum Physics and Chemistry”</h3>
+<p><em>2021, University of Warsaw (Poland)</em></p>
+
+<p>Fantastic <a href="https://szkoly.idub.uw.edu.pl/info/"> summer school </a> organized by Michal Tomza, Alexandre Dauphin, Ania Dawid and Maciej Lewenstein. I collaborated in the practical lectures about reinforcement learning. The notebooks I prepared in collaboration with Borj Requena can be found <a href="https://github.com/Shmoo137/SummerSchool2021_MLinQuantum/blob/master/D%20-%20Reinforcement%20Learning%20(by%20Florian%20Marquardt)/Reinforcement_learning.ipynb"> here </a>. In that same <a href="https://github.com/Shmoo137/SummerSchool2021_MLinQuantum"> repo </a> you can find the practical content of most of the school.</p>
+
+<h3 id="characterization-of-ergodicity-breaking-and-anomalous-diffusion-from-single-trajectories">Characterization of Ergodicity Breaking and Anomalous Diffusion from Single Trajectories</h3>
 <p><em>2021, University of Gothenburg, Virtual (Sweden)</em></p>
 
 <p>This lectures were given by Dr. Carlo Manzo during the workshop <a href="http://active-matter.eu/events/initial-training-on-experimental-methods-for-active-matter/"> Initial Training on Experimental Methods for Active Matter </a>. I collaborated in both in the development of the lectures content as well as in the exercises part. You can find the latter, with a throughout explanation on simulations of anomalous diffusion in <a href="https://github.com/AnDiChallenge/first_steps_in_anomalous_diffusion"> in this repository </a>.</p>
@@ -199,7 +204,7 @@ Multidisciplinary Research in Experimental Sciences </a>, organized by the <a hr
     
 <footer class="fixed-bottom">
   <div class="container mt-0">
-    &copy; Copyright 2021 Gorka  Muñoz-Gil.
+    &copy; Copyright 2022 Gorka  Muñoz-Gil.
     Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme. Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 
     
