added projects and corrected errors

--- a/projects/1_project/index.html
+++ b/projects/1_project/index.html
@@ -71,7 +71,7 @@
     <nav id="navbar" class="navbar navbar-light navbar-expand-sm fixed-top">
     <div class="container">
       
-      <a class="navbar-brand title font-weight-lighter" href="/">
+      <a class="navbar-brand title font-weight-lighter" href="http://localhost:4000/">
        <span class="font-weight-bold">Gorka</span>   Muñoz-Gil
       </a>
       
@@ -153,7 +153,17 @@
   </header>
 
   <article>
-    <p>(in construction)</p>
+    <div style="text-align: justify">
+In the early years of my research career, as a Master student in the QOT group at ICFO, I was focused on developing theoretical models to decipher anomalous diffusion. The goal of this project was to understand which may be the sources of anomalous diffusion in complex environments. We proposed three different models, each focusing on different particle-environment interactions:
+</div>
+
+<p align="center">
+<img src="../../assets/img/all_phenom.png" alt="drawing" width="700" />
+</p>
+
+<h3 id="trapping-in-crowded-environments">Trapping in crowded environments</h3>
+
+<p>In our first paper</p>
 
   </article>
 
