--- a/teaching/index.html
+++ b/teaching/index.html
@@ -71,7 +71,7 @@
     <nav id="navbar" class="navbar navbar-light navbar-expand-sm fixed-top">
     <div class="container">
       
-      <a class="navbar-brand title font-weight-lighter" href="http://localhost:4000/">
+      <a class="navbar-brand title font-weight-lighter" href="/">
        <span class="font-weight-bold">Gorka</span>   Muñoz-Gil
       </a>
       
